[package]
name = "poe2-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["std", "derive"] }
discord-rich-presence = { git = "https://github.com/vionya/discord-rich-presence.git", branch = "dev" }
log = "0.4"
pretty_env_logger = "0.5"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
