[package]
name = "poe2-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["std", "derive"] }
discord-rich-presence = { git = "https://github.com/LeagueRaINi/discord-rich-presence", branch = "main"}
fern = "0.7.0"
humantime = "2.1.0"
lazy_static = "1.5.0"
log = "0.4"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.33.0"

[build-dependencies]
winresource = "0.1.19"
